# AICOS

./: README.md  dataarch.json  go.mod  license
CPID/: 算力标识体系.md  算力标识体系更新版.md
CPID/cnc-app/backend/: .gitignore  README.md  pyproject.toml  requirements.txt  settings.py  urls.py
CPID/cnc-app/backend/cnc/: apps.py  authentications.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
CPID/cnc-app/backend/cnc/migrations/: 0001_initial.py
CPID/cnc-app/backend/config/: default.py  dev.py  stag.py
CPID/cnc-app/backend/docs/: apis.md  ctyun.md
CPID/cnc-app/backend/home_application/: urls.py  views.py
CPID/cnc-app/backend/templates/: index.html
CPID/cnc-app/webfe/: .bk.development.env  .bk.production.env  .gitignore  README.md  bk.config.js  index.html  package.json
CPID/cpid/: cpid.go  cpid_test.go
CPID/cpid/definition/: area.go  data_center.go  enterprise.go  industry.go  resource_type.go  service_type.go
OrchestrationScheduling/CRD+Controller/: Dockerfile  Makefile  README.md  box.go  boxdeployment.go  go.mod  go.sum  main.go  util.go  基于CRD实现BOX方案.md  重构POD实现BOX方案预研.md
OrchestrationScheduling/CRD+Controller/charts/: box-controller-1.0.0.tgz
OrchestrationScheduling/CRD+Controller/crd/: deploy.yaml  ing-svc.yaml  new-boxdp.yaml
OrchestrationScheduling/CRD+Controller/hack/: build.sh  update-codegen.sh
OrchestrationScheduling/box-design/xieyun-chenkun/: Box设计方案-谐云-chenkun.md
OrchestrationScheduling/自动注册算力标识/: Makefile  go.mod  go.sum  powerresource.md  readme.md
OrchestrationScheduling/自动注册算力标识/docs/: install.md  powerresource.md
OrchestrationScheduling/自动部署kubernetes/: Makefile  clean_node.sh  cncos-ops  install_master.sh  install_node.sh  offline_package.sh  readme.md
OrchestrationScheduling/自动部署kubernetes/docs/: install.md
OrchestrationScheduling/自动部署kubernetes/env/: offline-manifest.yaml
OrchestrationScheduling/自动部署kubernetes/k8s/: install_cni.sh  install_containerd  install_cri.sh  install_docker  install_helm  install_k8s_tools  (+17 more)
oauth2/manage/: manager.go
(+135 files in other folders)
